--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "sugoi-presentation-back",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
     "hono": "^4.7.4"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "wrangler": "^3.109.2"
   }
 }
