--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   websocket-server:
     container_name: websocket-server
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     image: websocket-server
@@ -12,6 +12,8 @@ services:
       - "8080:8080"
     volumes:
       - .:/app
+    depends_on:
+      - mongodb
 
   nginx:
     restart: always
@@ -20,9 +22,18 @@ services:
       - "8443:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ../front/dist:/var/www
+      # - ../front/dist:/var/www
       - ./nginx/static:/etc/nginx/static
-      - ./nginx/keys:/etc/nginx/keys
     tty: true
     extra_hosts:
       - host.docker.internal:host-gateway
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+      
+volumes:
+  mongodb_data:
