--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,14 +5,14 @@ map $http_upgrade $connection_upgrade {
 
 server {
   # 開発
-    listen       80 ssl;
+    listen       80;
   # 本番
     # listen       80;
     server_name  localhost;
     client_max_body_size 5G;
 
-    ssl_certificate      /etc/nginx/keys/server.crt;
-    ssl_certificate_key  /etc/nginx/keys/server.key;
+    # ssl_certificate      /etc/nginx/keys/server.crt;
+    # ssl_certificate_key  /etc/nginx/keys/server.key;
 
     location / {
         root   /var/www;
@@ -21,7 +21,7 @@ server {
     }
 
     location /app/ {
-        proxy_pass  http://sugoi-presentation:8080/;
+        proxy_pass  http://websocket-server:8080/;
         add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, key';
