[fix] Nginx設定とユーザー処理のエラーハンドリングを改善

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,15 +4,9 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  # 開発
     listen       80;
-  # 本番
-    # listen       80;
     server_name  localhost;
     client_max_body_size 5G;
-
-    # ssl_certificate      /etc/nginx/keys/server.crt;
-    # ssl_certificate_key  /etc/nginx/keys/server.key;
 
     location / {
         root   /var/www;
@@ -22,14 +16,17 @@ server {
 
     location /app/ {
         proxy_pass  http://websocket-server:8080/;
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
+        
+        add_header 'Access-Control-Allow-Origin' 'chrome-extension://kdkeoojbbnliickgjcaojmiekjjocdnh';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, key';
+        add_header 'Access-Control-Allow-Credentials' 'true';
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
+            add_header 'Access-Control-Allow-Origin' 'chrome-extension://kdkeoojbbnliickgjcaojmiekjjocdnh';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, key';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Length' 0;
             add_header 'Content-Type' 'text/plain charset=UTF-8';
